# OuterSpatial

./: .gitignore  README.md  default_launch.json  spatialos.json  spin_workers.sh
outerspatial/: .gitignore  CMakeLists.txt  outerspatial_engine.h
outerspatial/auction/: auction_house.h
outerspatial/common/: agent.h  commodity.h  history.h  messages.h  to_schema.h
outerspatial/metrics/: logger.h  metrics.h
outerspatial/traders/: AI_trader.h  fake_trader.h  human_trader.h  inventory.h
schema/: commodity.schema  market.schema  messages.schema  trader.schema
snapshots/: default.json  default.snapshot
workers/AITraderWorker/: CMakeLists.txt  build.json  spatialos.AITraderWorker.worker.json
workers/AITraderWorker/src/: aitraderworker_startup.cc
workers/AuctionHouseWorker/: CMakeLists.txt  build.json  spatialos.AuctionHouseWorker.worker.json  spatialos_worker_packages.json
workers/AuctionHouseWorker/src/: auctionhouseworker_startup.cc  startup.cc
workers/Managed/: .gitignore
workers/MonitorWorker/: CMakeLists.txt  build.json  spatialos.MonitorWorker.worker.json
workers/MonitorWorker/src/: monitorworker_startup.cc
